{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 36,
  "lineage": "4e39cd03-b990-213b-5ef1-b68d90a37b88",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.65.75.220",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-04-01T08:34:28.195-07:00",
            "id": "projects/infra-memolog/regions/europe-west6/addresses/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "infra-memolog",
            "region": "europe-west6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/regions/europe-west6/addresses/reddit-app-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/infra-memolog/zones/europe-west6-b/instances/reddit-app"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-01T08:34:28.069-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-memolog/global/firewalls/allow-mongo-default",
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
            "priority": 1000,
            "project": "infra-memolog",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-01T08:34:28.090-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-memolog/global/firewalls/allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
            "priority": 1000,
            "project": "infra-memolog",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-01T08:34:28.143-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-memolog/global/firewalls/allow-ssh-default",
            "name": "allow-ssh-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
            "priority": 1000,
            "project": "infra-memolog",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/firewalls/allow-ssh-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/images/reddit-app",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-memolog/zones/europe-west6-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-memolog/zones/europe-west6-b/instances/reddit-app",
            "instance_id": "318675455843043966",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "sshKeys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCnJMSfKSgF90GW9LjydLtqYlOD5MTCHHQW5TsbfbAMJchCV71Ya2Kuo6Y94N0iH+t1mF9Ix5KVFjK2dltBPTUq7Opys0KhebpOiy/jVlsi3hp8za+/h76aAT4ggc0VCM5HyZ2MPAyzummIkM8K3YXS1tYxuQG2DQIEic9OEvHHHa6hJlby+nUHst/fuI8Lv2gGS8N5YJ1g8eQmDM0WrvLvZO4GMTuqclN6ldrFGhqVT2UBrbQOX+N9pZlP1p7dP3KJ4+3g31/sweo5NwxiwmnIga4RH6Xtzq3A1ddMTKBR2tLozHtZeJX+F45EBnZNaISjty4M40i97gHn19Erwnj8igPq0D9KFgMPG6uvxDqBV6N7+/tnuU2lUbutYzlgMzdPNQJiFCkVL31ekp90VnI8ks8vJati9x3897++GMlK0s [...]
            },
            "metadata_fingerprint": "xG_sESaxVCo=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.65.75.220",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
                "network_ip": "10.172.0.15",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-memolog/regions/europe-west6/subnetworks/default",
                "subnetwork_project": "infra-memolog"
              }
            ],
            "project": "infra-memolog",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/zones/europe-west6-b/instances/reddit-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west6-b"
          },
          "dependencies": [
            "module.app.google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/images/reddit-db",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-memolog/zones/europe-west6-b/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-memolog/zones/europe-west6-b/instances/reddit-db",
            "instance_id": "8320682806601124459",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "sshKeys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCnJMSfKSgF90GW9LjydLtqYlOD5MTCHHQW5TsbfbAMJchCV71Ya2Kuo6Y94N0iH+t1mF9Ix5KVFjK2dltBPTUq7Opys0KhebpOiy/jVlsi3hp8za+/h76aAT4ggc0VCM5HyZ2MPAyzummIkM8K3YXS1tYxuQG2DQIEic9OEvHHHa6hJlby+nUHst/fuI8Lv2gGS8N5YJ1g8eQmDM0WrvLvZO4GMTuqclN6ldrFGhqVT2UBrbQOX+N9pZlP1p7dP3KJ4+3g31/sweo5NwxiwmnIga4RH6Xtzq3A1ddMTKBR2tLozHtZeJX+F45EBnZNaISjty4M40i97gHn19Erwnj8igPq0D9KFgMPG6uvxDqBV6N7+/tnuU2lUbutYzlgMzdPNQJiFCkVL31ekp90VnI8ks8vJati9x3897++GMlK0s [...]
            },
            "metadata_fingerprint": "xG_sESaxVCo=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.65.26.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
                "network_ip": "10.172.0.14",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-memolog/regions/europe-west6/subnetworks/default",
                "subnetwork_project": "infra-memolog"
              }
            ],
            "project": "infra-memolog",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/zones/europe-west6-b/instances/reddit-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west6-b"
          }
        }
      ]
    }
  ]
}